test/errors/infer_none.sl
# expect: COMPERROR
auto smth = none;
